--- a/turisTrazo/src/app/resena-calificacion/components/registrar-resena/registrar-resena.component.html
+++ b/turisTrazo/src/app/resena-calificacion/components/registrar-resena/registrar-resena.component.html
@@ -4,7 +4,7 @@
         Reseña <i class="fa-solid fa-plus" style="color: #ffffff;"></i></button>
 </div>
 
-<div class="flex mt-10 justify-center container m-auto " *ngIf="mostrarFormularioResena">
+<div class="flex mt-10 justify-center container m-auto " *ngIf="showFormResena">
     <div
         class="bg-white rounded-lg shadow-xl  md:p-2 lg:p-2 w-full md:w-full lg:w-full mx-auto mb-4 p-10 pl-20 shadow-gray-900">
         <h1 class="text-2xl md:text-2x1 font-semibold text-center mb-6">Escribe tu reseña</h1>
